# api/controller/dto/request_dto/trusted_aws_session_dto/edit_trusted_aws_session_request_dto.go
@@ -5,16 +5,33 @@ import (
 	"leapp_daemon/custom_error"
 )
 
+// swagger:parameters editTrustedAwsSession
+type EditTrustedAwsSessionParamsWrapper struct {
+	// This text will appear as description of your request body.
+	// in: body
+	Body EditTrustedAwsSessionRequestDto
+}
+
 type EditTrustedAwsSessionUriRequestDto struct {
 	Id string `uri:"id" binding:"required"`
 }
 
 type EditTrustedAwsSessionRequestDto struct {
-	ParentId      string `json:"parentId"`
-	AccountName   string `json:"accountName"`
+	// the parent session id, can be an aws plain or federated session
+	// it's generated with an uuid v4
+	ParentId string `json:"parentId"`
+
+	// the name which will be displayed
+	AccountName string `json:"accountName"`
+
+	// the account number of the aws account related to the role
 	AccountNumber string `json:"accountNumber" binding:"numeric,len=12"`
-	RoleName      string `json:"roleName"`
-	Region        string `json:"region" binding:"awsregion"`
+
+	// the role name
+	RoleName string `json:"roleName"`
+
+	// the region on which the session will be initialized
+	Region string `json:"region" binding:"awsregion"`
 }
 
 func (requestDto *EditTrustedAwsSessionRequestDto) Build(context *gin.Context) error {
