# api/controller/dto/response_dto/message_only_response_dto.go
@@ -2,6 +2,12 @@ package response_dto
 
 import "github.com/gin-gonic/gin"
 
+// swagger:response messageResponse
+type MessageOnlyResponseWrapper struct {
+	// in: body
+	Body MessageOnlyResponseDto
+}
+
 type MessageOnlyResponseDto struct {
 	Message string
 }
